@@ -16,6 +16,7 @@ Version 1.5.6+svn:
         line.
     * Under the Burning Suns:
       * Made Elyssa Loyal and Quick instead of Quick and Intelligent.
+
   * Editor2
     * The map editor is automatically started if the binary file used
       to start Wesnoth contains "editor" somewhere in its name (useful
@@ -110,6 +111,9 @@ Version 1.5.6:
     * Gave the Goblin Pillager the same bite attack as the Wolf Rider.
     * Updated movement and defense values on the reef terrain for many units.
     * Added the 'fearless' trait to the Heavy Infantryman line.
+
+  * User interface
+    * The map now scrolls earlier when the mouse reaches the border of Wesnoth.
 
   * Miscellaneous and bugfixes
     * There is a new revision of the main Wesnoth map with more placenames
